# waypoint

./: .dockerignore  .env.demo.example  .env.deploy.example  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.demo.yml  docker-compose.yml  mobility_context_codex_build_prompt.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
alembic/: env.py
app/: __init__.py  config.py  db.py  input_modes.py  main.py  models.py  ratelimit.py  schemas.py
docs/: DEMO.md  DEPLOY.md  IOS.md  README.md  ROADMAP.md
frontend/: capacitor.config.test.ts  capacitor.config.ts  index.html  ios-platform.test.ts  package-lock.json  package.json  vite.config.ts
scripts/: dev.sh  generate_beat_areas.py  generate_mcpp_areas.py  generate_seed_crime.py  live_smoke.py  otp_setup.sh  otp_thinkpad_setup.ps1  render_ios_icon.mjs  seed_crime.py  start-llama-swap.ps1  start-waypoint.ps1
tests/: conftest.py  helpers_dashboard.py  test_analysis_divergence.py  test_analysis_exposure.py  test_analysis_rate_tests.py  test_analysis_runs_service.py  test_api_flow.py  test_area_baselines.py  test_arrest_category_backfill.py  test_assistant_agent.py  test_assistant_api.py  test_assistant_client_builder.py  test_assistant_semantic_layer.py  test_assistant_summaries.py  test_assistant_tools.py  test_beat_baselines.py  test_beat_polygons.py  test_call_mapping.py  test_config_geocoder.py  test_config_routing.py  test_crime_backfill.py  test_crime_ingestion_service.py  test_crime_sources.py  test_crime_summary.py  test_csv_parser.py  test_dashboard_analysis_api.py  test_dashboard_freshness.py  test_dashboard_neighborhood_api.py  test_failover_llm_client.py  test_freshness_cache.py  test_frontend_static.py  test_geocoding_providers.py  (+46 more)
(+298 files in other folders)
